merge errors